# docure

./: LICENSE  README.md  pyproject.toml
docure/: __init__.py  cli.py  mirror.py  templates.py  utils.py
tests/: conftest.py  test_cli.py  test_mirror.py  test_utils.py
