[project]
name = "docure"
version = "0.1.0"
description = "Mirror your code structure into documentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
]

[project.scripts]
docure = "docure.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
